--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "migrate": "sqlite3 db/election.db < db/schema.sql",
     "seed": "sqlite3 db/election.db < db/seeds.sql",
     "db": "sqlite3 db/election.db",
-    "start": "node server.js"
+    "start": "nodemon server.js"
 },
   "keywords": [],
   "author": "",
